Fixed whitespace bug

--- a/app/modules/Popup/Job.module.css
+++ b/app/modules/Popup/Job.module.css
@@ -31,7 +31,7 @@
     font-size: 18px;
     
     /* Enable extra white space. */
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .timestamp {
